[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contextguard"
version = "0.1.0"
description = "Zero-dependency Python Agent Context & Memory Poisoning Detector"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["security", "agents", "memory-poisoning", "context", "llm", "static-analysis"]
authors = [
    {name = "Kris Kimmerle", email = "kris@kimmerle.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/kriskimmerle/contextguard"
Repository = "https://github.com/kriskimmerle/contextguard"
Issues = "https://github.com/kriskimmerle/contextguard/issues"

[project.scripts]
contextguard = "contextguard:main"

[tool.setuptools]
py-modules = ["contextguard"]
